[gui] catch up w/ current implementation (by opus4.8, codex5.5, gemini3/5flash)